<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">V Client</string>
    <string name="app_tagline">Minecraft Bedrock launcher</string>

    <string name="home">Home</string>
    <string name="launch">Launch Minecraft</string>
    <string name="settings">Settings</string>
    <string name="mods">Mods</string>
    <string name="profile">Profile</string>
    <string name="worlds">Worlds</string>
    <string name="skins">Skins</string>

    <string name="minecraft_version_detected">Installed Minecraft: %1$s</string>
    <string name="minecraft_not_installed">Minecraft is not installed on this device</string>
    <string name="minecraft_disabled">Minecraft %1$s is disabled</string>
    <string name="status_ready">Ready to launch</string>
    <string name="status_install_required">Install Minecraft to continue</string>
    <string name="status_launching">Opening Minecraft…</string>
    <string name="launch_success">Minecraft %1$s opened</string>
    <string name="launch_success_private_env">Minecraft %1$s opened with private instance %2$s</string>
    <string name="launch_success_local_env_only">Minecraft %1$s opened; private instance %2$s was prepared locally only</string>
    <string name="launch_failed">Launch failed: %1$s</string>
    <string name="launch_unknown_error">Unable to launch Minecraft</string>
    <string name="permission_shared_storage_title">Allow access to shared storage</string>
    <string name="permission_shared_storage_message">To sync each instance\'s worlds, resource packs and behavior packs into Minecraft, V Client needs \"All files access\". You will be taken to system settings.</string>
    <string name="permission_shared_storage_grant">Grant access</string>
    <string name="permission_shared_storage_skip">Continue without syncing</string>
    <string name="status_permission_required">Grant storage access to sync with Minecraft</string>
    <string name="notification_channel_name">V Client</string>

    <string name="fps_counter">FPS Counter</string>
    <string name="cps_counter">CPS Counter</string>
</resources>
